// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`batch request serializer serializeBatchRequest serializes payload for batch subrequests 1`] = `
"--batch_boundary
Content-Type: multipart/mixed; boundary=changeSet_boundary

--changeSet_boundary
Content-Type: application/http
Content-Transfer-Encoding: binary

POST /sap/opu/odata/sap/API_TEST_SRV/A_TestEntity HTTP/1.1
Content-Type: application/json
Accept: application/json

{\\"KeyPropertyGuid\\":\\"guidId\\",\\"KeyPropertyString\\":\\"strId\\",\\"Int16Property\\":12,\\"DoubleProperty\\":14.5}

--changeSet_boundary--
--batch_boundary
Content-Type: application/http
Content-Transfer-Encoding: binary

GET /sap/opu/odata/sap/API_TEST_SRV/A_TestEntity?$format=json HTTP/1.1
Content-Type: application/json
Accept: application/json


--batch_boundary
Content-Type: multipart/mixed; boundary=changeSet_boundary

--changeSet_boundary
Content-Type: application/http
Content-Transfer-Encoding: binary

PATCH /sap/opu/odata/sap/API_TEST_SRV/A_TestEntity(KeyPropertyGuid=guid'guidId',KeyPropertyString='strId') HTTP/1.1
Content-Type: application/json
Accept: application/json

{\\"Int16Property\\":12,\\"DoubleProperty\\":14.5}

--changeSet_boundary
Content-Type: application/http
Content-Transfer-Encoding: binary

DELETE /sap/opu/odata/sap/API_TEST_SRV/A_TestEntity(KeyPropertyGuid=guid'guidId',KeyPropertyString='strId') HTTP/1.1
Content-Type: application/json
Accept: application/json



--changeSet_boundary--
--batch_boundary
Content-Type: application/http
Content-Transfer-Encoding: binary

GET /sap/opu/odata/sap/API_TEST_SRV/A_TestEntity(KeyPropertyGuid=guid'guidId',KeyPropertyString='strId')?$format=json HTTP/1.1
Content-Type: application/json
Accept: application/json


--batch_boundary--
"
`;

exports[`batch request serializer serializeChangeSet serializes change set with multiple operations 1`] = `
"Content-Type: multipart/mixed; boundary=changeSet_boundary

--changeSet_boundary
Content-Type: application/http
Content-Transfer-Encoding: binary

PATCH /sap/opu/odata/sap/API_TEST_SRV/A_TestEntity(KeyPropertyGuid=guid'guidId',KeyPropertyString='strId') HTTP/1.1
Content-Type: application/json
Accept: application/json

{\\"Int16Property\\":12,\\"DoubleProperty\\":14.5}

--changeSet_boundary
Content-Type: application/http
Content-Transfer-Encoding: binary

POST /sap/opu/odata/sap/API_TEST_SRV/A_TestEntity HTTP/1.1
Content-Type: application/json
Accept: application/json

{\\"KeyPropertyGuid\\":\\"guidId\\",\\"KeyPropertyString\\":\\"strId\\",\\"Int16Property\\":12,\\"DoubleProperty\\":14.5}

--changeSet_boundary--"
`;

exports[`batch request serializer serializeChangeSet serializes change set with one operation 1`] = `
"Content-Type: multipart/mixed; boundary=changeSet_boundary

--changeSet_boundary
Content-Type: application/http
Content-Transfer-Encoding: binary

POST /sap/opu/odata/sap/API_TEST_SRV/A_TestEntity HTTP/1.1
Content-Type: application/json
Accept: application/json

{\\"KeyPropertyGuid\\":\\"guidId\\",\\"KeyPropertyString\\":\\"strId\\",\\"Int16Property\\":12,\\"DoubleProperty\\":14.5}

--changeSet_boundary--"
`;

exports[`batch request serializer serializeRequest serializes create request 1`] = `
"Content-Type: application/http
Content-Transfer-Encoding: binary

POST /sap/opu/odata/sap/API_TEST_SRV/A_TestEntity HTTP/1.1
Content-Type: application/json
Accept: application/json

{\\"KeyPropertyGuid\\":\\"guidId\\",\\"KeyPropertyString\\":\\"strId\\",\\"Int16Property\\":12,\\"DoubleProperty\\":14.5}
"
`;

exports[`batch request serializer serializeRequest serializes delete request with eTag 1`] = `
"Content-Type: application/http
Content-Transfer-Encoding: binary

DELETE /sap/opu/odata/sap/API_TEST_SRV/A_TestEntity(KeyPropertyGuid=guid'guidId',KeyPropertyString='strId') HTTP/1.1
Content-Type: application/json
Accept: application/json
If-Match: eTag


"
`;

exports[`batch request serializer serializeRequest serializes delete request with entity 1`] = `
"Content-Type: application/http
Content-Transfer-Encoding: binary

DELETE /sap/opu/odata/sap/API_TEST_SRV/A_TestEntity(KeyPropertyGuid=guid'guidId',KeyPropertyString='strId') HTTP/1.1
Content-Type: application/json
Accept: application/json


"
`;

exports[`batch request serializer serializeRequest serializes delete request with id 1`] = `
"Content-Type: application/http
Content-Transfer-Encoding: binary

DELETE /sap/opu/odata/sap/API_TEST_SRV/A_TestEntity(KeyPropertyGuid=guid'test',KeyPropertyString='test') HTTP/1.1
Content-Type: application/json
Accept: application/json


"
`;

exports[`batch request serializer serializeRequest serializes getAll request 1`] = `
"Content-Type: application/http
Content-Transfer-Encoding: binary

GET /sap/opu/odata/sap/API_TEST_SRV/A_TestEntity?$format=json HTTP/1.1
Content-Type: application/json
Accept: application/json

"
`;

exports[`batch request serializer serializeRequest serializes getAll request with absolute sub request path 1`] = `
"Content-Type: application/http
Content-Transfer-Encoding: binary

GET http://example.com/sap/opu/odata/sap/API_TEST_SRV/A_TestEntity?$format=json HTTP/1.1
Content-Type: application/json
Accept: application/json

"
`;

exports[`batch request serializer serializeRequest serializes getAll request with custom headers 1`] = `
"Content-Type: application/http
Content-Transfer-Encoding: binary

GET /sap/opu/odata/sap/API_TEST_SRV/A_TestEntity?$format=json HTTP/1.1
Content-Type: application/json
Accept: application/json
Custom-Header: custom

"
`;

exports[`batch request serializer serializeRequest serializes getAll request with entity relative sub request path 1`] = `
"Content-Type: application/http
Content-Transfer-Encoding: binary

GET /A_TestEntity?$format=json HTTP/1.1
Content-Type: application/json
Accept: application/json

"
`;

exports[`batch request serializer serializeRequest serializes getAll request with filter 1`] = `
"Content-Type: application/http
Content-Transfer-Encoding: binary

GET /sap/opu/odata/sap/API_TEST_SRV/A_TestEntity?$format=json&$filter=(StringProperty eq 'test') HTTP/1.1
Content-Type: application/json
Accept: application/json

"
`;

exports[`batch request serializer serializeRequest serializes getByKey request 1`] = `
"Content-Type: application/http
Content-Transfer-Encoding: binary

GET /sap/opu/odata/sap/API_TEST_SRV/A_TestEntity(KeyPropertyGuid=guid'testId',KeyPropertyString='test')?$format=json HTTP/1.1
Content-Type: application/json
Accept: application/json

"
`;

exports[`batch request serializer serializeRequest serializes update request 1`] = `
"Content-Type: application/http
Content-Transfer-Encoding: binary

PATCH /sap/opu/odata/sap/API_TEST_SRV/A_TestEntity(KeyPropertyGuid=guid'guidId',KeyPropertyString='strId') HTTP/1.1
Content-Type: application/json
Accept: application/json

{\\"Int16Property\\":12,\\"DoubleProperty\\":14.5}
"
`;

exports[`batch request serializer serializeRequest serializes update request using put 1`] = `
"Content-Type: application/http
Content-Transfer-Encoding: binary

PUT /sap/opu/odata/sap/API_TEST_SRV/A_TestEntity(KeyPropertyGuid=guid'guidId',KeyPropertyString='strId') HTTP/1.1
Content-Type: application/json
Accept: application/json

{\\"KeyPropertyGuid\\":\\"guidId\\",\\"KeyPropertyString\\":\\"strId\\",\\"Int16Property\\":12,\\"DoubleProperty\\":14.5}
"
`;
